// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render RealmList 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="align-items-center border-bottom pt-2 pb-2 row"
        >
          <div
            class="text-break col-3"
          >
            realm1
          </div>
          <div
            class="text-break col"
          >
            username1
          </div>
          <div
            class="text-break col"
          >
            password1
          </div>
          <div
            class="text-break col-3"
          >
            <div />
          </div>
          <div
            class="col-sm-auto"
          >
            <div
              class="btn-group"
              role="group"
            >
              <button
                class="btn btn-primary"
                type="button"
              >
                <i
                  class="fas fa-edit"
                />
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                <i
                  class="fas fa-trash-alt"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="align-items-center border-bottom pt-2 pb-2 row"
        >
          <div
            class="text-break col-3"
          >
            realm2
          </div>
          <div
            class="text-break col"
          >
            username2
          </div>
          <div
            class="text-break col"
          >
            password2
          </div>
          <div
            class="text-break col-3"
          >
            <div />
          </div>
          <div
            class="col-sm-auto"
          >
            <div
              class="btn-group"
              role="group"
            >
              <button
                class="btn btn-primary"
                type="button"
              >
                <i
                  class="fas fa-edit"
                />
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                <i
                  class="fas fa-trash-alt"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="align-items-center border-bottom pt-2 pb-2 row"
        >
          <div
            class="text-break col-3"
          >
            realm3
          </div>
          <div
            class="text-break col"
          >
            username3
          </div>
          <div
            class="text-break col"
          >
            password3
          </div>
          <div
            class="text-break col-3"
          >
            <div />
          </div>
          <div
            class="col-sm-auto"
          >
            <div
              class="btn-group"
              role="group"
            >
              <button
                class="btn btn-primary"
                type="button"
              >
                <i
                  class="fas fa-edit"
                />
              </button>
              <button
                class="btn btn-danger"
                type="button"
              >
                <i
                  class="fas fa-trash-alt"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="align-items-center border-bottom pt-2 pb-2 row"
      >
        <div
          class="text-break col-3"
        >
          realm1
        </div>
        <div
          class="text-break col"
        >
          username1
        </div>
        <div
          class="text-break col"
        >
          password1
        </div>
        <div
          class="text-break col-3"
        >
          <div />
        </div>
        <div
          class="col-sm-auto"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              <i
                class="fas fa-edit"
              />
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              <i
                class="fas fa-trash-alt"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="align-items-center border-bottom pt-2 pb-2 row"
      >
        <div
          class="text-break col-3"
        >
          realm2
        </div>
        <div
          class="text-break col"
        >
          username2
        </div>
        <div
          class="text-break col"
        >
          password2
        </div>
        <div
          class="text-break col-3"
        >
          <div />
        </div>
        <div
          class="col-sm-auto"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              <i
                class="fas fa-edit"
              />
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              <i
                class="fas fa-trash-alt"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="align-items-center border-bottom pt-2 pb-2 row"
      >
        <div
          class="text-break col-3"
        >
          realm3
        </div>
        <div
          class="text-break col"
        >
          username3
        </div>
        <div
          class="text-break col"
        >
          password3
        </div>
        <div
          class="text-break col-3"
        >
          <div />
        </div>
        <div
          class="col-sm-auto"
        >
          <div
            class="btn-group"
            role="group"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              <i
                class="fas fa-edit"
              />
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              <i
                class="fas fa-trash-alt"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render empty RealmList 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
